get rid of setValueAndSyncDOM (simplify code) fix CSS bug: missing <span> wrapping inputButtonText and unitButtonText 	modified:   h5p/development/H5PEditor.FormulaAppletEditor-0.14/scripts/formulaapplet-editor.js 	modified:   main/public/css/virtualKeyboard.css 	modified:   main/src/js/virtualKeyboard.js 	renamed:    version-0.14.103.txt -> version-0.14.104.txt

--- a/main/public/css/virtualKeyboard.css
+++ b/main/public/css/virtualKeyboard.css
@@ -96,18 +96,6 @@ div#virtualKeyboard.h5pEditor .virtualKeyboardButton.smallgap {
 	background-color: orange;
 }
 
-.virtualKeyboardButton.virtualKeyboard-setunsetUnit {
-	font-size: 80%;
-	color: green;
-	line-height: 140%;
-}
-
-.virtualKeyboardButton.virtualKeyboard-setinput {
-	font-size: 80%;
-	color: green;
-	line-height: 140%;
-}
-
 .virtualKeyboardButton.virtualKeyboard-version {
 	font-size: 150%;
 }
@@ -130,9 +118,18 @@ div#virtualKeyboard.h5pEditor .virtualKeyboardButton.smallgap {
 	color: green;
 }
 
-.virtualKeyboardButton.virtualKeyboard-setunsetUnit span {
+.virtualKeyboardButton.virtualKeyboard-setunsetUnit span{
 	font-size: 50%;
 	color: green;
+	/* line-height: 140%; */
+	vertical-align: middle;
+}
+
+.virtualKeyboardButton.virtualKeyboard-setinput span{
+	font-size: 50%;
+	color: green;
+	/* line-height: 140%; */
+	vertical-align: middle;
 }
 
 .virtualKeyboardButton.virtualKeyboard-sin span {
